# phytolens1-

./: .env.example  .gitignore  00_GO_LIVE.md  00_START_HERE.md  90_DAY_EXECUTION_PLAN.md  ADVANCED_FEATURES_GUIDE.md  AI_SERVICE_README.md  CHANGELOG.txt  CHECKLIST_FINAL.txt  COMPETITIVE_MOAT_ANALYSIS.md  CONFIRMACION_FINAL.txt  DATASET_AUDIT.json  DATA_COLLECTION_PLAN.md  DOCUMENTACION_FINAL_V2.txt  ELITE_STRATEGY_BLUEPRINT.md  ERRORES_RESUELTOS.txt  EXECUTION_CHECKLIST.md  FEATURES_COMPLETE.txt  GUIA_GITHUB_RAPIDA.txt  GUIA_USAR_IA_V2.txt  INDEX_NAVIGATION.md  INDICE_ARCHIVOS.txt  INICIO_RAPIDO_VISIONPLANT.txt  INSTRUCCIONES_GITHUB.txt  MEJORAS_COMPLETAS.txt  MEJORAS_IA_V2.txt  MISSION_ACCOMPLISHED.txt  MONITORING_SETUP.md  QUICK_REFERENCE.md  README.md  README_INICIO.txt  README_STRATEGY_DOCS.md  README_VISIONPLANT.md  RESUMEN_FINAL.txt  RESUMEN_V2.txt  SERVIDOR_ACTIVO.txt  TEAM_COORDINATION.md  TECHNICAL_IMPLEMENTATION.md  VALIDATION_REPORT.md  WEEK1_EXECUTION_CHECKLIST.md  (+25 more)
app/: Nueva carpeta BIG PAAAAAAAAAAAPA.code-workspace  __init__.py  api_advanced.py  api_professional.py  main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: login.py  scans.py
app/core/: config.py
app/models/: __init__.py  hierarchical_model.py  scan.py  user.py
app/schemas/: scan.py  user.py
app/services/: LA OSTIA JODER.py  __init__.py  cache_manager.py  explainability.py  fine_tuning.py  inference.py  inference_edge.py  inference_optimized.py  inference_v3.py
app/templates/: index.html
scripts/: train_hierarchical.py
